# IoT-Temp-Humidity-Monitor

./: README.md
Src/: Cfg.h
Src/App/EnviroSense/: envirosense.c  envirosense.h
Src/Hal/DHT11/: dht.c  dht.h
Src/Hal/MQTT/: mqtt.c  mqtt.h
Src/Hal/WiFi/: wifi.c  wifi.h
main/: CMakeLists.txt  main.c
